--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=restapi
+
+#Database configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/expensetransactions
+spring.datasource.username=root
+spring.datasource.password=12
+
+#Jpa properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.servlet.context-path=/api/v1
